sass/layouts/_header.scss
.top-header {
	background-color: $color__background-dark;
	padding: 0 1em;
	justify-content: space-between;
	display: none;

	@include breakpoint(md) {
		display: flex;
	}

	.fa-solid {
		margin-right: 0.5em;
	}

	&__p {
		margin: 0.85em 0;
		font-size: 0.8rem;
		color: $color__text-light;
		display: block;
	}

	&__cart {
		padding: 0 0.5em;
		background-color: $color__primary;
		position: relative;

		&-link {
			width: 100%;
			height: 40px;
			text-decoration: none;
			display: flex;
			align-items: center;
			font-size: 0.8rem;
			color: $color__text-light;

			&:visited,
			&:active {
				color: $color__text-light;
			}

			&:hover {
				color: $color__background-body;
			}

		}
	}
}

.site-branding {
	max-width: 253px;
	width: 75%;
	height: 37.5px;
	margin: 0.4em 0 0.4em 0;
	position: relative;
	z-index: 100;
	line-height: 0.9;

	> a {
		width: 100%;
		height: 37.5px;
		position: absolute;
		left: 0;
		top: 0;
		z-index: 100;
	}
}

.site-title,
.site-description {
	margin: 0;
	transform: translateX(53px);

	@include breakpoint(lg) {
		transform: translateX(86px);
	}
}

.site-title {
	margin-top: 5px;

	> a {
		text-decoration: none;
		color: #2c2c2c;
		font-size: 1em;

		@include breakpoint(md) {
			font-size: 0.9em;
		}

		@include breakpoint(lg) {
			font-size: 1.2em;
		}
	}
}

.site-description {
	font-weight: 900;
	text-transform: uppercase;
	font-size: 0.8em;

	@include breakpoint(lg) {
		font-size: 1em;
	}
}

.custom-logo {
	width: auto;
	height: 40px;
	position: absolute;
	left: 0;

	@include breakpoint(lg) {
		height: 73px;
		top: -18px;
	}
}

.site-header {
	width: 100%;
	padding: 0 1em;
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	position: relative;
	z-index: 15;

	@include breakpoint(md) {
		padding: 35px 1em;
	}

	&::after {
		width: 100vw;
		height: 50px;
		content: "";
		display: block;
		position: absolute;
		left: 0;
		top: 0;
		z-index: 1;
		background-color: $color__background-body;

		@include breakpoint(md) {
			display: none;
		}
	}
}

